--- a/ard/templates/layout.html
+++ b/ard/templates/layout.html
@@ -27,6 +27,7 @@
 	      <div class="collapse navbar-collapse" id="navbarToggle">
 	        <div class="navbar-nav mr-auto">
 	          <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
+	          <a class="nav-item nav-link" href="{{ url_for('products') }}">Products</a>
 	          <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
 	        </div>
 	        <!-- Navbar Right Side -->
@@ -53,7 +54,7 @@
 	    	{% endwith %}
 	        {% block content %}{% endblock %}
 	    </div>
-	    <div class="col-md-4">
+	    <!--<div class="col-md-4">
 	      <div class="content-section">
 	        <h3>ARD Features</h3>
 	        <p class='text-muted'>You can put any information here you'd like.
@@ -66,7 +67,7 @@
 	        </p>
 	      </div>
 	    </div>
-	  </div>
+	  </div>-->
 	</main>
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
