--- a/ard/templates/home.html
+++ b/ard/templates/home.html
@@ -1,4 +1,148 @@
 {% extends "layout.html" %}
 {% block content %}
 	<h1>Home</h1>
+	<br>
+	<h3>Overall Appliances Sentiment ScatterPlot</h3>
+	<img src="{{image_file}}">
+	<br>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-6">
+				<h3>Overall Appliances Sentiment</h3>
+				<div id="chartdiv"></div>
+			</div>
+			<div class="col-md-6">
+				<h3>Total Star Ratings</h3>
+				<div id="chartdiv2"></div>
+			</div>
+		</div>
+	</div>
+	
+	<!-- Styles -->
+	<style>
+	#block-1 {
+		width: 100%;
+	}
+
+	#chartdiv {
+		margin: 30px;
+		width: 100%;
+	  	height: 300px;
+	}
+
+	</style>
+
+	<!-- Resources -->
+	<script src="https://www.amcharts.com/lib/4/core.js"></script>
+	<script src="https://www.amcharts.com/lib/4/charts.js"></script>
+	<script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
+
+	<!-- Chart code -->
+	<script>
+	am4core.ready(function() {
+
+	// Themes begin
+	am4core.useTheme(am4themes_animated);
+	// Themes end
+
+	// Create chart instance
+	var chart = am4core.create("chartdiv", am4charts.PieChart);
+
+	// Add data
+	chart.data = [ {
+	  "country": "Positive",
+	  "litres": 540926
+	}, {
+	  "country": "Negative",
+	  "litres": 61851
+	}];
+
+	// Set inner radius
+	chart.innerRadius = am4core.percent(50);
+
+	// Add and configure Series
+	var pieSeries = chart.series.push(new am4charts.PieSeries());
+	pieSeries.dataFields.value = "litres";
+	pieSeries.dataFields.category = "country";
+	pieSeries.slices.template.stroke = am4core.color("#fff");
+	pieSeries.slices.template.strokeWidth = 2;
+	pieSeries.slices.template.strokeOpacity = 1;
+
+	// This creates initial animation
+	pieSeries.hiddenState.properties.opacity = 1;
+	pieSeries.hiddenState.properties.endAngle = -90;
+	pieSeries.hiddenState.properties.startAngle = -90;
+
+	}); // end am4core.ready()
+	</script>
+
+	<!-- Styles -->
+	<style>
+	#chartdiv2 {
+	  width: 100%;
+	  height: 300px;
+	}
+
+	</style>
+
+	<!-- Resources -->
+	<script src="https://www.amcharts.com/lib/4/core.js"></script>
+	<script src="https://www.amcharts.com/lib/4/charts.js"></script>
+	<script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
+
+	<!-- Chart code -->
+	<script>
+	am4core.ready(function() {
+
+	// Themes begin
+	am4core.useTheme(am4themes_animated);
+	// Themes end
+
+	// Create chart instance
+	var chart = am4core.create("chartdiv2", am4charts.XYChart3D);
+
+	// Add data
+	chart.data = [{
+	  "year": 5,
+	  "income": 416288,
+	  "color": chart.colors.next()
+	}, {
+	  "year": 4,
+	  "income": 75476,
+	  "color": chart.colors.next()
+	}, {
+	  "year": 3,
+	  "income": 30652,
+	  "color": chart.colors.next()
+	}, {
+	  "year": 2,
+	  "income": 20734,
+	  "color": chart.colors.next()
+	}, {
+	  "year": 1,
+	  "income": 59627,
+	  "color": chart.colors.next()
+	}];
+
+	// Create axes
+	var categoryAxis = chart.yAxes.push(new am4charts.CategoryAxis());
+	categoryAxis.dataFields.category = "year";
+	categoryAxis.numberFormatter.numberFormat = "#";
+	categoryAxis.renderer.inversed = true;
+
+	var  valueAxis = chart.xAxes.push(new am4charts.ValueAxis()); 
+
+	// Create series
+	var series = chart.series.push(new am4charts.ColumnSeries3D());
+	series.dataFields.valueX = "income";
+	series.dataFields.categoryY = "year";
+	series.name = "Income";
+	series.columns.template.propertyFields.fill = "color";
+	series.columns.template.tooltipText = "{valueX}";
+	series.columns.template.column3D.stroke = am4core.color("#fff");
+	series.columns.template.column3D.strokeOpacity = 0.2;
+
+	}); // end am4core.ready()
+	</script>
+
 {% endblock content %}
