--- a/ard/templates/about.html
+++ b/ard/templates/about.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 	<h1>About Page</h1>
+	<p style="font-size: 24px">
+		We present a pipeline suitable for big data and showcase the framework on an example of sentiment analysis as a machine learning task. We use the Amazon Appliances Review Dataset (http://deepyeti.ucsd.edu/jianmo/amazon/index.html) and do much of our pre-processing using the MapReduce framework. We present a dashboard-based front-end, through which we will demo the CRUD operations and present our results from the algorithms that we applied on the data. We conclude our work by reporting some visualizations engendered from our analysis, and delineate a future line of work. 
+	</p>
 {% endblock content %}
