--- a/ard/templates/layout.html
+++ b/ard/templates/layout.html
@@ -29,6 +29,7 @@
 	          <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
 	          <a class="nav-item nav-link" href="{{ url_for('products') }}">Products</a>
 	          <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
+	          <a class="nav-item nav-link" href="{{ url_for('network') }}">Network</a>
 	        </div>
 	        <!-- Navbar Right Side -->
 	        <div class="navbar-nav">
